--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "express": "^5.1.0",
     "express-session": "^1.18.1"
